created a index page

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -2,7 +2,138 @@
     ViewData["Title"] = "Login Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!-- Hero Section-->
+<section id="hero">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Software<br/>Development</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <button type="button" class="btn btn-dark btn-lg">Learn More</button>
+      </div>
+      
+      <div class="col img-col">
+        <img src="https://image.freepik.com/free-vector/developer-laptop-computer-with-open-robotic-soft-open-automation-architecture-open-source-robotics-soft-free-development-concept-bright-vibrant-violet-isolated-illustration_335657-474.jpg" alt="software development" class="img-fluid"/>
+      </div> 
+    </div>
+    
+    <div class="row cards">
+      <div class="col-md-4 d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Web Developer</h5>
+            <img        src="https://image.flaticon.com/icons/png/512/1251/1251737.png" alt="Service1" class="icon"/>
+          <p class="card-text">Some quick example text to build on the card             title and make up the bulk of the card's content.</p>
+          </div>
+      </div>
+    </div>  
+      <div class="col-md-4 d-flex justify-content-center">
+          <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Machine Learning</h5>
+            <img        src="https://image.flaticon.com/icons/png/512/1118/1118896.png"           alt="Service2" class="icon">
+          <p class="card-text">Some quick example text to build on the card             title and make up the bulk of the card's content.</p>
+          </div>
+      </div>
+      </div>
+      
+    <div class="col-md-4 d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Web Security</h5>
+            <img        src="https://image.flaticon.com/icons/png/512/970/970899.png"           alt="Service2" class="icon"/>
+          <p class="card-text">Some quick example text to build on the card             title and make up the bulk of the card's content.</p>
+          </div>
+      </div>
+  </div>  
+  </div>
+</section>
+<!--End Hero Section-->
+ 
+<!-- About Us Section-->
+  <section id="about-us">
+    <div class="container">
+      <div class="row aling-items-center">
+        <div class="col">
+          <img src="https://image.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_335657-1651.jpg" alt="" class="img-fluid"/>
+        </div>
+        <div class="col">
+          <h1>About Us</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <button type="button" class="btn btn-dark btn-lg">Meet Us</button>
+        </div>
+      </row>
+    </div>
+  </section>
+<!-- End About Us Section--> 
+  
+<!-- Project Section-->
+  <section id="projects">
+   <div class="container">
+    <div class="row aling-items-center projects">
+      <div class="col">
+        <h1>Our Projects</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+    </div>
+    
+    <div class="row aling-items-center projects">
+      <div class="col">
+        <div class="card mb-3">
+  <img src="https://image.freepik.com/free-vector/financial-business-investment-illustration-mobile-onboard-screen-user-interface-concept_106954-1240.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Investment app</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">React Native, Java. REST API</small></p>
+  </div>
 </div>
+      </div>
+      <div class="col">
+         <div class="card mb-3">
+  <img src="https://image.freepik.com/free-vector/mobile-ui-kit-with-unlock-system-security-page-vector-illustration-set_106954-1185.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">My Docs</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Kotlin, REST API</small></p>
+  </div>
+</div>
+      </div> 
+    </div>
+    <div class="row aling-items-center">
+      <div class="col">
+         <div class="card mb-3">
+  <img src="https://image.freepik.com/free-vector/onboard-mobile-screen-with-traveling-app-illustration-concept_106954-1267.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Socialize</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Kotlin, REST API</small></p>
+  </div>
+</div>
+      </div>
+      <div class="col">
+         <div class="card mb-3">
+  <img src="https://image.freepik.com/free-vector/mobile-onboard-screen-user-interface-with-tax-report-illustration-concept_106954-1249.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Give Me a Ride</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Google Api. Javascript ecc..</small></p>
+  </div>
+</div>
+      </div> 
+    </div>
+   </div>
+  </section>
+<!-- End Project Section-->
+  
+<!-- Contact Us Section-->
+  <section id="contact">
+    <div class="container">
+    <div class="row aling-items-center projects">
+      <div class="col">
+        <h1>Contact Us</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+    </div>
+  </section>
+ <!-- End Contact Us Section-->-
