--- a/Views/Login/Register.cshtml
+++ b/Views/Login/Register.cshtml
@@ -5,6 +5,7 @@
 
 
     <div id="Register">
+    <form action="RegisterDB" method="Post">
         <h3 class="text-center text-white pt-5">Register Form</h3>
         <div class="container">
             <div id="Register-row" class="row justify-content-center align-items-center">
@@ -22,11 +23,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="Username" class="text-info">Username:</label><br>
-                                <input type="text" name="Username" id="Username" class="form-control">
+                                <input type="text" name="User_name" id="Username" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="Email" class="text-info">Email:</label><br>
-                                <input type="Email" name="Email" id="Email" class="form-control">
+                                <input type="Email" name="Email_Id" id="Email" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="Password" class="text-info">Password:</label><br>
@@ -45,4 +46,5 @@
                 </div>
             </div>
         </div>
+    </form>
     </div>
