--- a/wwwroot/css/Login.css
+++ b/wwwroot/css/Login.css
@@ -74,7 +74,6 @@ section {
     margin: 0;
     padding: 0;
     color:white;
-    background-color: #17a2b8;
     height: 100vh;
   }
 #Register .container #Register-row #Register-column #Register-box {
@@ -117,6 +116,6 @@ section {
     margin-bottom: 85px;
     padding-bottom: 70px;
   }
-  #login .container #login-row #login-column #login-box #login-form #register-link {
+  #login .container #login-row #login-column #login-box #login-form #login-link {
     margin-top: -85px;
   }
