--- a/wwwroot/css/Login.css
+++ b/wwwroot/css/Login.css
@@ -1,3 +1,5 @@
+
+
 section {
     padding-top: 100px;
     padding-bottom:10px;
@@ -70,52 +72,96 @@ section {
 
 
 
-  .LoginPg #Register{
-    margin: 0;
-    padding: 0;
-    color:white;
-    height: 100vh;
-  }
-#Register .container #Register-row #Register-column #Register-box {
-    margin-top: 20px;
-    max-width: 600px;
-    height: 320px;
-    margin-bottom: 70px;
-  }
-  #Register .container #Register-row #Register-column #Register-box #Register-form {
-    padding: 20px;
-    border: 1px solid #9C9C9C;
-    background-color: #EAEAEA;
-    margin-bottom: 85px;
-    padding-bottom: 70px;
-  }
-  #Register .container #Register-row #Register-column #Register-box #Register-form #register-link {
-    margin-top: -85px;
-  }
 
 
 
 
+@import url('https://fonts.googleapis.com/css?family=Numans');
 
-.LoginPg #login{
-    margin: 0;
-    padding: 0;
-    color:white;
-    background-color: #17a2b8;
-    height: 100vh;
-  }
-#login .container #login-row #login-column #login-box {
-    margin-top: 20px;
-    max-width: 600px;
-    height: 320px;
-  }
-  #login .container #login-row #login-column #login-box #login-form {
-    padding: 20px;
-    border: 1px solid #9C9C9C;
-    background-color: #EAEAEA;
-    margin-bottom: 85px;
-    padding-bottom: 70px;
-  }
-  #login .container #login-row #login-column #login-box #login-form #login-link {
-    margin-top: -85px;
-  }
+.signin{
+background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+background-size: cover;
+background-repeat: no-repeat;
+height: 100%;
+font-family: 'Numans', sans-serif;
+padding:80px;
+}
+
+.signin .container{
+height: 100%;
+align-content: center;
+}
+
+.signin .card{
+height: 370px;
+margin:65px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.signin .social_icon span{
+font-size: 60px;
+margin-left: 10px;
+color: #FFC312;
+}
+
+.signin .social_icon span:hover{
+color: white;
+cursor: pointer;
+}
+
+.signin .card-header h3{
+color: white;
+}
+
+.signin .social_icon{
+position: absolute;
+right: 20px;
+top: -45px;
+}
+
+.signin .input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+
+.signin input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+.signin .remember{
+color: white;
+}
+
+.signin .remember input
+{
+width: 20px;
+height: 20px;
+margin-left: 15px;
+margin-right: 5px;
+}
+
+.signin .login_btn{
+color: black;
+background-color: #FFC312;
+width: 100px;
+}
+
+.signin .login_btn:hover{
+color: black;
+background-color: white;
+}
+
+.signin .links{
+color: white;
+}
+
+.signin .links a{
+margin-left: 4px;
+}
