--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -16,7 +16,7 @@
 				</div>
 			</div>
 			<div class="card-body">
-				<form action="" method="Post">
+				<form action="@Url.Action("LoginDB","Login")" method="post">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
