--- a/Views/Login/Register.cshtml
+++ b/Views/Login/Register.cshtml
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form action="RegisterDB" method="post"> 
+                    <form action="@Url.Action("RegisterDB","Login")" method="post"> 
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa-solid fa-user"></i></span>
